zmiana nie wiem jaka

--- a/proces.html
+++ b/proces.html
@@ -15,7 +15,7 @@
     </div>
     <nav>
         <div class="nav-links">
-            <a href="./index.html" class="nav-link" data-page="home">Strona Główna</a>
+            <a href="./home.html" class="nav-link" data-page="home">Strona Główna</a>
             <a href="./proces.html" class="nav-link active" data-page="process">Proces Współpracy</a>
             <a href="./kontakt.html" class="nav-link" data-page="contact">Kontakt</a>
         </div>
